# rust_mart

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
http_server/: Cargo.toml
http_server/src/: cart.rs  errors.rs  main.rs  product.rs
http_server/src/routes/: mod.rs  product_details.rs  product_pricing.rs
migrations/2023-07-26-182928_add_products_table/: up.sql
migrations/2023-07-29-041311_add_cart_related_tables/: up.sql
pool_and_migrations/: Cargo.toml
pool_and_migrations/migrations/: 20230804051017_product_related_tables.sql  20230804175722_product_flash_sale.sql  20230804183951_not_null_constraint.sql
pool_and_migrations/src/: migrations.rs  pool.rs
product_metadata/: .env  Cargo.toml  sqlx-data.json
product_metadata/src/: lib.rs  product.rs
product_metadata/src/contracts/: get_product_metadata.rs  mod.rs
product_pricing/: Cargo.toml  sqlx-data.json
product_pricing/src/: lib.rs  price.rs
product_pricing/src/contracts/: increase_price.rs  mod.rs  new_flash_sale.rs  price_estimate.rs  product_price.rs
product_pricing/src/estimate_price/: mod.rs
product_pricing/src/estimate_price/competitors/: go_mart.rs  js_mart.rs  mod.rs
product_pricing/src/estimate_price/supplier/: cheram_suppliers.rs  mod.rs
product_pricing/src/price_estimate/: mod.rs
product_pricing/src/price_estimate/competitors/: go_mart.rs  js_mart.rs  mod.rs
product_pricing/src/price_estimate/supplier/: cheram_suppliers.rs  mod.rs
product_pricing/src/product/: mod.rs
repository/: Cargo.toml
repository/src/: errors.rs  lib.rs  schema.rs
repository/src/cart/: mod.rs  model.rs
repository/src/product/: mod.rs  model.rs
src/: errors.rs  main.rs  pool.rs  product.rs  schema.rs
src/cart/: mod.rs  model.rs
src/product/: mod.rs  model.rs
