[package]
name = "rust_mart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
actix-web = "4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
