[package]
name = "rust_mart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
dotenvy = "0.15"
actix-web = "4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0.72"
serde_json = "1.0.104"
r2d2 = "0.8.10"
env_logger = "0.8"
log = "0.4"
