[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.8"
log = "0.4"
repository = { path = "../repository" }

anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true

