[package]
name = "pool_and_migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-native-tls" , "postgres", "uuid", "time", "chrono", "json"  ] }
anyhow = "1.0.72"
