[package]
name = "product_pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
anyhow = "1.0.72"
futures = "0.3.28"
log = "0.4.19"
chrono = { version = "0.4.26", features = ["serde"] }


pool_and_migrations = { path = "../pool_and_migrations" }

uuid.workspace = true
sqlx.workspace = true
serde.workspace = true
