[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
dotenvy = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0.72"
r2d2 = "0.8.10"
tokio = { version = "1", features = ["rt"] }


uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
